Fix massive horizontal scroll bar on home page.

--- a/web/less/base.less
+++ b/web/less/base.less
@@ -447,7 +447,8 @@ a:link, a:visited, a:hover, a:active
     //background-color: #3c3c3c;
     background: url('/img/slideshow.jpg') repeat;
     border-bottom: 0.5em solid #212121;
-    
+    overflow: hidden;
+
     #slideshow
     {
         width: 60em;
